# dprint-plugin-sql

./: Cargo.toml  README.md  rust-toolchain.toml
deployment/: schema.json
src/: format_text.rs
src/configuration/: builder.rs  configuration.rs  mod.rs  resolve_config.rs
